infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blockchain-fintech
  labels:
    name: blockchain-fintech
    app.kubernetes.io/part-of: blockchain-fintech
